2011-01-25  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.22

	* build/vs2008/gmime.vcproj: Bumped version.

2011-01-22  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-mem.c (stream_write): Correctly calculate the
	end boundary of the stream when bound_end is -1.

2010-12-05  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.21

	* build/vs2008/gmime.vcproj: Bumped version.

2010-11-29  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (decode_address): Handle edge cases
	where inptr reaches the end of the input string prematurely due to
	a malformed address.

2010-11-21  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #635407.

	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_decrypt):
	Updated error messages to be more consistent.

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_verify):
	Make sure to set an error in all cases returning NULL.

2010-11-21  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #635405.

	* gmime/gmime-cipher-context.c (g_mime_signer_get_*): These
	functions all now take a const GMimeSigner *.

2010-11-19  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #635152

	* gmime/gmime-gpg-context.c (GpgCtx): No longer has a sigfile
	member. Instead contains a sigstream and passwd_fd is now renamed
	to secret_fd and used for both sending gpg the user's passwd as
	well as for sending gpg the digital signature when verifying.
	(gpg_ctx_new): Updated for the new struct members.
	(gpg_ctx_set_sigstream): Replaces gpg_ctx_set_sigfile().
	(gpg_ctx_free): Updated for the new struct members.
	(gpg_ctx_get_argv): Modify our --verify command-line so that we
	can pas gpg the digital signature without first writing it to
	disk. Also modified to return char** instead of a GPtrArray to
	simplify things.
	(gpg_ctx_op_start): Modified to also create more pipes in VERIFY
	mode.