@@ -1,3 +1,8 @@
+2011-01-29  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_decrypt):
+	Fixed documentation. Fixes bug #640906 and bug #640911.
+
 2011-01-25  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
